--- a/lab5/solution.ipynb
+++ b/lab5/solution.ipynb
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1899,107 +1899,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.221  0.692]\n",
-      " [ 0.206  0.687]\n",
-      " [ 0.29   0.856]\n",
-      " [ 0.531  0.879]\n",
-      " [ 0.154  0.323]\n",
-      " [ 0.89   0.639]\n",
-      " [ 0.631  0.697]\n",
-      " [ 0.184  0.446]\n",
-      " [ 0.472  0.781]\n",
-      " [ 0.337  0.082]\n",
-      " [ 0.069  0.901]\n",
-      " [ 0.586  0.035]\n",
-      " [ 0.586  0.017]\n",
-      " [ 0.381  0.886]\n",
-      " [ 0.865  0.91 ]\n",
-      " [ 0.995  0.911]\n",
-      " [ 0.018  0.281]\n",
-      " [ 0.59   0.18 ]\n",
-      " [ 0.375  0.673]\n",
-      " [ 0.52   0.387]\n",
-      " [ 0.124  0.801]\n",
-      " [ 0.883  0.245]\n",
-      " [ 0.759  0.255]\n",
-      " [ 0.612  0.309]\n",
-      " [ 0.756  0.797]\n",
-      " [ 0.381  0.592]\n",
-      " [ 0.965  0.749]\n",
-      " [ 0.784  0.196]\n",
-      " [ 0.763  0.193]\n",
-      " [ 0.45   0.061]\n",
-      " [ 0.888  0.827]\n",
-      " [ 0.593  0.074]\n",
-      " [ 0.723  0.344]\n",
-      " [ 0.921  0.854]\n",
-      " [ 0.919  0.031]\n",
-      " [ 0.546  0.874]\n",
-      " [ 0.843  0.437]\n",
-      " [ 0.166  0.648]\n",
-      " [ 0.844  0.264]\n",
-      " [ 0.372  0.344]\n",
-      " [ 0.458  0.368]\n",
-      " [ 0.821  0.58 ]\n",
-      " [ 0.97   0.173]\n",
-      " [ 0.686  0.65 ]\n",
-      " [ 0.436  0.994]\n",
-      " [ 0.899  0.833]\n",
-      " [ 0.314  0.545]\n",
-      " [ 0.849  0.112]\n",
-      " [ 0.857  0.952]\n",
-      " [ 0.265  0.885]\n",
-      " [ 0.511  0.26 ]\n",
-      " [ 0.462  0.663]\n",
-      " [ 0.845  0.598]\n",
-      " [ 0.766  0.852]\n",
-      " [ 0.936  0.414]\n",
-      " [ 0.253  0.974]\n",
-      " [ 0.382  0.259]\n",
-      " [ 0.871  0.28 ]\n",
-      " [ 0.951  0.506]\n",
-      " [ 0.053  0.08 ]\n",
-      " [ 0.544  0.745]\n",
-      " [ 0.399  0.308]\n",
-      " [ 0.169  0.849]\n",
-      " [ 0.051  0.823]\n",
-      " [ 0.517  0.993]\n",
-      " [ 0.595  0.467]\n",
-      " [ 0.231  0.214]\n",
-      " [ 0.743  0.082]\n",
-      " [ 0.242  0.188]\n",
-      " [ 0.168  0.502]\n",
-      " [ 0.487  0.303]\n",
-      " [ 0.573  0.092]\n",
-      " [ 0.007  0.849]\n",
-      " [ 0.601  0.779]\n",
-      " [ 0.368  0.923]\n",
-      " [ 0.174  0.838]\n",
-      " [ 0.705  0.641]\n",
-      " [ 0.275  0.482]\n",
-      " [ 0.787  0.344]\n",
-      " [ 0.553  0.928]\n",
-      " [ 0.994  0.934]\n",
-      " [ 0.088  0.705]\n",
-      " [ 0.267  0.484]\n",
-      " [ 0.698  0.448]\n",
-      " [ 0.416  0.684]\n",
-      " [ 0.911  0.043]\n",
-      " [ 0.92   0.096]\n",
-      " [ 0.676  0.623]\n",
-      " [ 0.427  0.567]\n",
-      " [ 0.009  0.892]\n",
-      " [ 0.502  0.043]\n",
-      " [ 0.755  0.565]\n",
-      " [ 0.898  0.061]\n",
-      " [ 0.41   0.699]\n",
-      " [ 0.307  0.664]\n",
-      " [ 0.64   0.518]\n",
-      " [ 0.749  0.874]\n",
-      " [ 0.318  0.468]\n",
-      " [ 0.978  0.613]\n",
-      " [ 0.66   0.958]\n",
-      " [ 0.43   0.337]]\n"
+      "[[ 0.425  0.293]\n",
+      " [ 0.754  0.663]\n",
+      " [ 0.592  0.408]\n",
+      " [ 0.853  0.54 ]\n",
+      " [ 0.158  0.384]\n",
+      " [ 0.624  0.336]\n",
+      " [ 0.693  0.897]\n",
+      " [ 0.301  0.089]\n",
+      " [ 0.795  0.542]\n",
+      " [ 0.404  0.431]\n",
+      " [ 0.042  0.199]\n",
+      " [ 0.719  0.168]\n",
+      " [ 0.89   0.937]\n",
+      " [ 0.308  0.411]\n",
+      " [ 0.507  0.989]\n",
+      " [ 0.871  0.258]\n",
+      " [ 0.089  0.559]\n",
+      " [ 0.918  0.833]\n",
+      " [ 0.536  0.304]\n",
+      " [ 0.451  0.386]\n",
+      " [ 0.716  0.317]\n",
+      " [ 0.327  0.958]\n",
+      " [ 0.316  0.756]\n",
+      " [ 0.336  0.834]\n",
+      " [ 0.735  0.002]\n",
+      " [ 0.315  0.635]\n",
+      " [ 0.986  0.12 ]\n",
+      " [ 0.695  0.24 ]\n",
+      " [ 0.632  0.399]\n",
+      " [ 0.411  0.498]\n",
+      " [ 0.474  0.487]\n",
+      " [ 0.046  0.74 ]\n",
+      " [ 0.442  0.798]\n",
+      " [ 0.375  0.759]\n",
+      " [ 0.521  0.538]\n",
+      " [ 0.128  0.274]\n",
+      " [ 0.841  0.488]\n",
+      " [ 0.525  0.336]\n",
+      " [ 0.044  0.041]\n",
+      " [ 0.197  0.904]\n",
+      " [ 0.136  0.569]\n",
+      " [ 0.315  0.158]\n",
+      " [ 0.521  0.401]\n",
+      " [ 0.126  0.005]\n",
+      " [ 0.575  0.037]\n",
+      " [ 0.283  0.229]\n",
+      " [ 0.417  0.656]\n",
+      " [ 0.223  0.482]\n",
+      " [ 0.212  0.367]\n",
+      " [ 0.92   0.026]\n",
+      " [ 0.361  0.538]\n",
+      " [ 0.873  0.187]\n",
+      " [ 0.45   0.246]\n",
+      " [ 0.225  0.549]\n",
+      " [ 0.965  0.881]\n",
+      " [ 0.009  0.88 ]\n",
+      " [ 0.175  0.392]\n",
+      " [ 0.237  0.287]\n",
+      " [ 0.974  0.161]\n",
+      " [ 0.244  0.855]\n",
+      " [ 0.52   0.844]\n",
+      " [ 0.779  0.409]\n",
+      " [ 0.758  0.989]\n",
+      " [ 0.692  0.469]\n",
+      " [ 0.502  0.883]\n",
+      " [ 0.927  0.309]\n",
+      " [ 0.404  0.677]\n",
+      " [ 0.68   0.154]\n",
+      " [ 0.225  0.678]\n",
+      " [ 0.999  0.854]\n",
+      " [ 0.034  0.94 ]\n",
+      " [ 0.496  0.688]\n",
+      " [ 0.234  0.903]\n",
+      " [ 0.69   0.888]\n",
+      " [ 0.789  0.38 ]\n",
+      " [ 0.515  0.693]\n",
+      " [ 0.668  0.393]\n",
+      " [ 0.698  0.689]\n",
+      " [ 0.33   0.794]\n",
+      " [ 0.564  0.171]\n",
+      " [ 0.93   0.631]\n",
+      " [ 0.564  0.513]\n",
+      " [ 0.511  0.242]\n",
+      " [ 0.661  0.351]\n",
+      " [ 0.345  0.534]\n",
+      " [ 0.721  0.659]\n",
+      " [ 0.509  0.166]\n",
+      " [ 0.131  0.107]\n",
+      " [ 0.684  0.01 ]\n",
+      " [ 0.832  0.998]\n",
+      " [ 0.908  0.586]\n",
+      " [ 0.084  0.857]\n",
+      " [ 0.671  0.299]\n",
+      " [ 0.13   0.607]\n",
+      " [ 0.125  0.592]\n",
+      " [ 0.62   0.825]\n",
+      " [ 0.284  0.137]\n",
+      " [ 0.578  0.813]\n",
+      " [ 0.638  0.637]\n",
+      " [ 0.474  0.09 ]\n",
+      " [ 0.308  0.256]]\n"
      ]
     }
    ],
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -2022,16 +2022,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.615,  0.696],\n",
-       "       [ 0.928,  0.162],\n",
-       "       [ 0.426,  0.028],\n",
+       "array([[ 0.601,  0.317],\n",
+       "       [ 0.734,  0.624],\n",
+       "       [ 0.092,  0.102],\n",
        "       ..., \n",
-       "       [ 0.7  ,  0.628],\n",
-       "       [ 0.671,  0.228],\n",
-       "       [ 0.666,  0.296]])"
+       "       [ 0.994,  0.155],\n",
+       "       [ 0.057,  0.923],\n",
+       "       [ 0.336,  0.035]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2042,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -2087,7 +2087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -2096,7 +2096,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nan\n"
+      "872.500584997\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-e45beb76ed43>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msgd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-8-7e8b8b84196a>\u001b[0m in \u001b[0;36msgd\u001b[0;34m(iterations)\u001b[0m\n\u001b[1;32m     29\u001b[0m                 \u001b[0mrating\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m                 \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrating\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m                     \u001b[0merr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mitem_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrating\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m                     \u001b[0merror\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mmse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-7e8b8b84196a>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(user_id, item_id, rating, alpha)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m#print err\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0muser_pref_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlatent_preferences\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mlatent_preferences\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0merr\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlatent_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mlatent_features\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mitem_id\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0malpha\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0merr\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0muser_pref_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -2111,9 +2124,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -2125,14 +2136,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
